# ST7789_GT911

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/lvgl/: lv_conf_template.h  lvgl.h
components/lvgl/src/misc/: lv_color.h
components/ui2/: CMakeLists.txt  custom.c  custom.h  events_init.c  events_init.h  gui_guider.c  gui_guider.h  setup_scr_screen.c  setup_scr_screen_1.c
components/ui2/images/: images_list.mk  images_md5.json
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  spi_lcd_touch_example_main.c
